--- a/try.html
+++ b/try.html
@@ -1,11 +1,12 @@
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="try.css">
     <meta charset="utf-8">
     <title>Try Web</title>
   </head>
   <body>
-
+    
   </body>
-</html>>
+</html>
