--- a/try.html
+++ b/try.html
@@ -7,6 +7,10 @@
     <title>Try Web</title>
   </head>
   <body>
-    
+    <ul>
+      <li><p>Home</p></li>
+      <li><p>About me</p></li>
+      <li><p>settings</p></li>
+    </ul>
   </body>
 </html>
