--- a/try.html
+++ b/try.html
@@ -7,10 +7,12 @@
     <title>Try Web</title>
   </head>
   <body>
-    <ul>
-      <li><p>Home</p></li>
-      <li><p>About me</p></li>
+    <div id="Navigation">
+    <ul id="Navigation">
+      <li ><p>Home</p></li>
+      <li ><p>About me</p></li>
       <li><p>settings</p></li>
+    </div>
     </ul>
   </body>
 </html>
