--- a/try.html
+++ b/try.html
@@ -12,8 +12,10 @@
       <li ><p>Home</p></li>
       <li ><p>About me</p></li>
       <li><p>settings</p></li>
-      <p>oy oyyy</p>
     </div>
     </ul>
+    <span >
+      <p class="Welcome">Welcome</p>
+    </span>
   </body>
 </html>
