--- a/try.html
+++ b/try.html
@@ -9,13 +9,16 @@
   <body>
     <div id="Navigation">
     <ul id="Navigation">
-      <li ><p>Home</p></li>
-      <li ><p>About me</p></li>
-      <li><p>settings</p></li>
+      <li ><p><a href="#first">Home</a></p></li>
+      <li ><p><a href="#">About me</a></p></li>
+      <li><p><a href="#">settings</a></p></li>
     </div>
     </ul>
     <span >
-      <p class="Welcome">Welcome</p>
+      <p class="Welcome Trans" id="first">Welcome</p>
+      <p class="to Trans">to my Website</p>
+        <p class="Created">Created by</p>
+      <p class="name Trans">Alfonso P. Puente</p>
     </span>
   </body>
 </html>
