--- a/try.html
+++ b/try.html
@@ -7,6 +7,7 @@
     <title>Try Web</title>
   </head>
   <body>
+    <!--Navigation-->
     <div id="Navigation">
     <ul id="Navigation">
       <li ><p><a href="#first">Home</a></p></li>
@@ -14,11 +15,17 @@
       <li><p><a href="#">settings</a></p></li>
     </div>
     </ul>
+    <!--Welcometext-->
     <span >
       <p class="Welcome Trans" id="first">Welcome</p>
       <p class="to Trans">to my Website</p>
         <p class="Created">Created by</p>
       <p class="name Trans">Alfonso P. Puente</p>
     </span>
+    <!--picDivleft-->
+    <div id="pictureleft">
+     <div id="picturecontainer">
+     </div>
+    </div>
   </body>
 </html>
