--- a/try.html
+++ b/try.html
@@ -26,6 +26,10 @@
     <!--picDivleft-->
     <div id="pictureleft">
      <div id="picturecontainer">
+       <p id="Javaletter">J</p>
+       <p id="Javaletter">A</p>
+       <p id="Javaletter">V</p>
+       <p id="Javaletter">A</p>
      </div>
   </body>
 </html>
