--- a/try.html
+++ b/try.html
@@ -17,12 +17,14 @@
     </ul>
     </div>
     <!--Welcometext-->
+    <div id="bg1">
     <span >
       <p class="Welcome Trans" id="first">Welcome</p>
       <p class="to Trans">to my Website</p>
         <p class="Created">Created by</p>
       <p class="name Trans">Alfonso P. Puente</p>
     </span>
+  </div>
     <!--picDivleft-->
     <div id="pictureleft">
      <div id="picturecontainer">
