--- a/try.html
+++ b/try.html
@@ -26,12 +26,8 @@
     </span>
   </div>
     <!--picDivleft-->
-    <div id="pictureleft">
+    <div id="pictureright">
      <div id="picturecontainer">
-       <p id="Javaletter">J</p>
-       <p id="Javaletter">A</p>
-       <p id="Javaletter">V</p>
-       <p id="Javaletter">A</p>
      </div>
   </body>
 </html>
