--- a/try.html
+++ b/try.html
@@ -7,27 +7,27 @@
     <title>Try Web</title>
   </head>
   <body>
-    <!--Navigation-->
-    <div id="Navigation">
-    <ul id="Navigation">
-      <li ><p><a href="#first">Home</a></p></li>
-      <li ><p><a href="#">About me</a></p></li>
-      <li><p><a href="#">settings</a></p></li>
-    </div>
-    </ul>
-    </div>
-    <!--Welcometext-->
-    <div id="bg1">
-    <span >
-      <p class="Welcome Trans" id="first">Welcome</p>
-      <p class="to Trans">to my Website</p>
-        <p class="Created">Created by</p>
-      <p class="name Trans">Alfonso P. Puente</p>
-    </span>
-  </div>
-    <!--picDivleft-->
-    <div id="pictureright">
-     <div id="picturecontainer">
-     </div>
+      <!--Navigation-->
+      <div id="Navigation">
+        <ul id="Navigation">
+          <li ><p><a href="#first">Home</a></p></li>
+          <li ><p><a href="#">About me</a></p></li>
+          <li><p><a href="#">settings</a></p></li>
+        </ul>
+      </div>
+        <!--Welcometext-->
+        <div id="bg1">
+          <span >
+            <p class="Welcome Trans" id="first">Welcome</p>
+            <p class="to Trans">to my Website</p>
+            <p class="Created">Created by</p>
+            <p class="name Trans">Alfonso P. Puente</p>
+          </span>
+        </div>
+        <!--picDivmid-->
+        <div id="pictureright">
+          <div id="picturecontainer">
+          </div>
+        </div>
   </body>
 </html>
