--- a/try.html
+++ b/try.html
@@ -25,9 +25,15 @@
           </span>
         </div>
         <!--picDivmid-->
-        <div id="pictureright">
-          <div id="picturecontainer">
+        <div id="pictureback" class="first">
+          <div id="picturecontainer" class="right">
           </div>
+        </div>
+        <div id="pictureback" class="second">
+            <div id="picturecontainer" class="mid">
+        </div>
+        <div id="pictureback" class="third">
+            <div id="picturecontainer" class="left">
         </div>
   </body>
 </html>
