--- a/try.html
+++ b/try.html
@@ -8,15 +8,16 @@
     <title>Try Web</title>
   </head>
   <body>
+    <button type="button" id="zzy" onclick="close1()">X</button>
+    <img src="download (1).png" id="pic1" alt="prof" onclick="open1()"/>
     <div id="menu">
-      <button type="button" id="zzy" onclick="close1()">X</button>
-      <img src="csslogo.png" alt="pic" id="pic1" onclick="color()"/>
+
     </div>
       <!--Navigation-->
       <div id="Navigation">
         <ul id="Navigation">
           <li ><p><a href="#first">Home</a></p></li>
-          <li ><p><a href="#" onclick="color()">About me</a></p></li>
+          <li ><p><a href="#" onclick="open1()">About me</a></p></li>
           <li><p><a href="#">settings</a></p></li>
         </ul>
       </div>
